--- a/docs/samples/tests/xunit/bunit.docs.xunit.samples.csproj
+++ b/docs/samples/tests/xunit/bunit.docs.xunit.samples.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../../../../src/bunit.web/bunit.web.csproj" />
+    <ProjectReference Include="../../../../src/bunit/bunit.csproj" />
     <ProjectReference Include="../../components/bunit.docs.samples.csproj" />
   </ItemGroup>
 
