--- a/docs/.editorconfig
+++ b/docs/.editorconfig
@@ -1,8 +1,10 @@
 root = true
 
 [*]
+tab_size = 2
 indent_style = space
 indent_size = 2
+indent_width = 2
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = false
@@ -11,6 +13,11 @@ insert_final_newline = false
 trim_trailing_whitespace = false
 
 [*.{cs,razor}]
+tab_size = 2
+indent_style = space
+indent_size = 2
+indent_width = 2
+
 dotnet_diagnostic.BL0001.severity = none
 dotnet_diagnostic.BL0002.severity = none
 dotnet_diagnostic.BL0003.severity = none
