--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -67,6 +67,7 @@ jobs:
       - name: 🧪 Run unit tests (sync)
         run: |
           dotnet test --filter Category!=async -c release
+
       - name: 📛 Upload hang- and crash-dumps on test failure
         if: failure()
         uses: actions/upload-artifact@v3
@@ -108,7 +109,7 @@ jobs:
           dotnet restore ${{ github.workspace }}/TemplateTestMstest --source https://api.nuget.org/v3/index.json --source ${{ github.workspace }}/packages
           dotnet test ${{ github.workspace }}/TemplateTestMstest
 
-      # DocFx only works well on Windows currently
-      - name: 📄 Build documentation
-        if: matrix.os == 'windows-latest'
-        run: dotnet build docs/site/
+      - name: 📄 Building docs
+        run: |
+          dotnet tool update -g docfx --version 2.67.0
+          docfx docs/site/docfx.json
