--- a/.editorconfig
+++ b/.editorconfig
@@ -451,6 +451,7 @@ dotnet_diagnostic.CA1056.severity = none # CA1056: Uri properties should not be 
 dotnet_diagnostic.CA1308.severity = none # CA1308: Normalize strings to uppercase
 dotnet_diagnostic.CA1710.severity = none # CA1710: Identifiers should have correct suffix
 dotnet_diagnostic.CA1711.severity = none # CA1711: Identifiers should not have incorrect suffix
+dotnet_diagnostic.CA1863.severity = suggestion # CA1863: Cache a 'CompositeFormat' for repeated use in this formatting operation
 dotnet_diagnostic.CA2007.severity = none # CA2007: Consider calling ConfigureAwait on the awaited task
 dotnet_diagnostic.CA2201.severity = suggestion # CA2201: Do not raise reserved exception types
 dotnet_diagnostic.CA2225.severity = none # CA2225: Operator overloads have named alternates
