--- a/docs/samples/tests/xunit/bunit.docs.xunit.samples.csproj
+++ b/docs/samples/tests/xunit/bunit.docs.xunit.samples.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <RootNamespace>Bunit.Docs.Samples</RootNamespace>
+    <NoWarn>BL0001</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,8 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../../../../src/bunit/bunit.csproj" />
-    <ProjectReference Include="../../components/bunit.docs.samples.csproj" />
+    <ProjectReference Include="..\..\..\..\src\bunit\bunit.csproj" />
+    <ProjectReference Include="..\..\components\bunit.docs.samples.csproj" />
   </ItemGroup>
 
 </Project>
