--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -111,3 +111,7 @@ jobs:
         run: |
           dotnet tool update -g docfx --version 2.67.0
           docfx docs/site/docfx.json
+
+      - name: 🧪 Run docs samples unit tests
+        run: |
+          dotnet test docs/samples/samples.sln
