--- a/docs/samples/tests/nunit/bunit.docs.nunit.samples.csproj
+++ b/docs/samples/tests/nunit/bunit.docs.nunit.samples.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../../../../src/bunit/bunit.csproj" />
-    <ProjectReference Include="../../components/bunit.docs.samples.csproj" />
+    <ProjectReference Include="..\..\..\..\src\bunit\bunit.csproj" />
+    <ProjectReference Include="..\..\components\bunit.docs.samples.csproj" />
   </ItemGroup>
 
 </Project>
