--- a/docs/samples/tests/razor/bunit.docs.razor.samples.csproj
+++ b/docs/samples/tests/razor/bunit.docs.razor.samples.csproj
@@ -17,8 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../../../../src/bunit/bunit.csproj" />
-    <ProjectReference Include="../../components/bunit.docs.samples.csproj" />
+    <ProjectReference Include="..\..\..\..\src\bunit\bunit.csproj" />
+    <ProjectReference Include="..\..\components\bunit.docs.samples.csproj" />
   </ItemGroup>
 
 </Project>
