feat: improve event dispatching logging

--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -42,6 +42,7 @@
 		<Using Include="Moq" />
 		<Using Include="Shouldly" />
 		<Using Include="Xunit" />
+		<Using Include="Xunit.Abstractions" />
 	</ItemGroup>
 
 </Project>
