--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -22,7 +22,7 @@
 		<LangVersion>11.0</LangVersion>
 		<AccelerateBuildsInVisualStudio>false</AccelerateBuildsInVisualStudio>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<NoWarn>CA1014,NU5104,NETSDK1138</NoWarn>
+		<NoWarn>CA1014,NU5104,NETSDK1138,SYSLIB0051</NoWarn>
 		<CheckEolTargetFramework>false</CheckEolTargetFramework>
 
 		<!-- Used by code coverage -->
