--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -12,7 +12,7 @@ on:
       nugetRelease:
         description: 'Release to NuGet? Set to "true" to release to NuGet.org as well as GPR.'
         required: true
-        default: 'false'
+        default: 'true'
 
 jobs:
   release-preview:
