--- a/tests/bunit.testassets/bunit.testassets.csproj
+++ b/tests/bunit.testassets/bunit.testassets.csproj
@@ -13,14 +13,19 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="xunit.core" Version="2.4.2" />
-		<PackageReference Include="xunit.assert" Version="2.4.2" />
+		<PackageReference Include="xunit.core" Version="2.5.0" />
+		<PackageReference Include="xunit.assert" Version="2.5.0" />
 		<PackageReference Include="xunit.abstractions" Version="2.0.3" />
-		<PackageReference Include="Serilog" Version="2.12.0" />
+		<PackageReference Include="Serilog" Version="3.0.1" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
+		<PackageReference Include="Serilog.Expressions" Version="3.4.1" />
 		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="$(DotNet8Version)" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="$(DotNet8Version)" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="$(DotNet8Version)" />
+		<PackageReference Update="GitHubActionsTestLogger" Version="2.3.3">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 
