--- a/tests/bunit.tests/bunit.tests.csproj
+++ b/tests/bunit.tests/bunit.tests.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\bunit\bunit.csproj" />
+        <ProjectReference Include="..\..\src\bunit\Bunit.csproj" />
         <ProjectReference Include="..\bunit.testassets\bunit.testassets.csproj" />
     </ItemGroup>
 
