--- a/tests/bunit.tests/bunit.tests.csproj
+++ b/tests/bunit.tests/bunit.tests.csproj
@@ -10,4 +10,40 @@
         <ProjectReference Include="..\bunit.testassets\bunit.testassets.csproj" />
     </ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="AutoFixture" Version="4.18.0" />
+		<PackageReference Include="AutoFixture.Xunit2" Version="4.18.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
+		<PackageReference Include="NSubstitute" Version="5.1.0" />
+		<PackageReference Include="Shouldly" Version="4.2.1" />
+		<PackageReference Include="TimeProviderExtensions" Version="1.0.0-rc.1" />
+		<PackageReference Include="xunit" Version="2.5.0" />
+		<PackageReference Include="Xunit.Combinatorial" Version="1.6.24" />
+		<PackageReference Include="coverlet.msbuild" Version="6.0.0" PrivateAssets="All" />
+		<PackageReference Include="GitHubActionsTestLogger" Version="2.3.2">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+			<NoWarn>NU1701</NoWarn>
+		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup Label="Implicit usings">
+		<Using Include="AutoFixture" />
+		<Using Include="AutoFixture.Xunit2" />
+		<Using Include="Bunit.TestAssets.SampleComponents" />
+		<Using Include="Bunit.TestAssets.SampleComponents.Data" />
+		<Using Include="Microsoft.JSInterop" />
+		<Using Include="Microsoft.AspNetCore.Components.Web" />
+		<Using Include="Microsoft.AspNetCore.Components.Routing" />
+		<Using Include="System.Reflection" />
+		<Using Include="NSubstitute" />
+		<Using Include="Shouldly" />
+		<Using Include="Xunit" />
+		<Using Include="Xunit.Abstractions" />
+	</ItemGroup>
+	
 </Project>
