--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -16,7 +16,7 @@
 	<PropertyGroup Label="Compile settings">
 		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
-		<AccelerateBuildsInVisualStudio>true</AccelerateBuildsInVisualStudio>
+		<AccelerateBuildsInVisualStudio>false</AccelerateBuildsInVisualStudio>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<NoWarn>CA1014,NU5104,NETSDK1138,AD0001,SYSLIB0051</NoWarn>
 		<CheckEolTargetFramework>false</CheckEolTargetFramework>
