add label, aria-label, wrapped label

--- a/src/bunit.web.query/bunit.web.query.csproj
+++ b/src/bunit.web.query/bunit.web.query.csproj
@@ -50,4 +50,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="$(DotNet9Version)" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\bunit.web\bunit.web.csproj" />
+	</ItemGroup>
+
 </Project>
