--- a/src/bunit.web.query/bunit.web.query.csproj
+++ b/src/bunit.web.query/bunit.web.query.csproj
@@ -51,6 +51,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\AngleSharpWrappers\AngleSharpWrappers.csproj" />
 	  <ProjectReference Include="..\bunit.web\bunit.web.csproj" />
 	</ItemGroup>
 
