--- a/tests/bunit.web.anglesharp.tests/bunit.web.anglesharp.tests.csproj
+++ b/tests/bunit.web.anglesharp.tests/bunit.web.anglesharp.tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net8.0</TargetFrameworks>
+		<TargetFramework>net8.0</TargetFramework>
 		<RootNamespace>Bunit</RootNamespace>
 		<AssemblyName>Bunit.Web.AngleSharp.Tests</AssemblyName>
 		<ImplicitUsings>true</ImplicitUsings>
@@ -23,11 +23,9 @@
 		<PackageReference Update="Microsoft.CodeAnalysis.CSharp.SourceGenerators.Testing.XUnit" Version="1.1.1" />
 
 		<PackageReference Include="xunit" Version="2.6.1" />
-		<!-- DO NOT UPGRADE TO versions > 2.4.5 as they do not support .net5 or older -->
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.4">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-			<NoWarn>NU1701</NoWarn>
 		</PackageReference>
 	</ItemGroup>
 
