--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -81,10 +81,9 @@ jobs:
       - name: 🛠️ Verfiy docs samples
         run: dotnet test docs/samples/samples.sln
 
-      - name: 🛠️ Building docs
-        run: |
-          dotnet tool update -g docfx --version 2.67.0
-          docfx docs/site/docfx.json
+      - name: 📄 Building docs
+        working-directory: ./docs/site
+        run: dotnet run Site.csproj
 
       - name: 🛠️ Deploy to GitHub Pages
         if: success()
