fix: use ToDisplayString and ToDisplayParts to make sure members are generated correctly

--- a/src/bunit.web.anglesharp/bunit.web.anglesharp.csproj
+++ b/src/bunit.web.anglesharp/bunit.web.anglesharp.csproj
@@ -12,13 +12,17 @@
 		<EmbeddedResource Include="WrapperBase.cs" />
 	</ItemGroup>
 
-	<ItemGroup>		
+	<ItemGroup>
 		<PackageReference Include="AngleSharp" Version="1.0.7" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0" />
+		<PackageReference Include="Meziantou.Polyfill" Version="1.0.30">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 </Project>
