--- a/src/bunit.web/bunit.web.csproj
+++ b/src/bunit.web/bunit.web.csproj
@@ -78,9 +78,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\bunit.core\bunit.core.csproj" />
-		<ProjectReference Include="..\bunit.web.anglesharp\bunit.web.anglesharp.csproj"
-				  OutputItemType="Analyzer"
-				  ReferenceOutputAssembly="false" />
+		<ProjectReference Include="..\bunit.web.anglesharp\bunit.web.anglesharp.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
 	<ItemGroup Label="Implicit usings" Condition="$(MSBuildProjectName) != 'bunit.template' AND $(MSBuildProjectName) != 'bunit'">
