--- a/src/bunit.web.query/bunit.web.query.csproj
+++ b/src/bunit.web.query/bunit.web.query.csproj
@@ -44,4 +44,16 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="$(DotNet8Version)" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Remove="version.json" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="version.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+	  </Content>
+	</ItemGroup>
+
 </Project>
